--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -1,1 +1,6 @@
-<button (click)="sendMessage()">Send</button>
+<button (click)="sendMessage()">Send ESP_7888034/movement</button>
+
+<br/>
+
+<input type="text" [formControl]="speachText">
+<button (click)="speak()">Speak</button>
