--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -4,3 +4,7 @@
 
 <input type="text" [formControl]="speachText">
 <button (click)="speak()">Speak</button>
+
+<br/>
+
+<button (click)="getCommutingHistory()">Get Commuting History</button>
