--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div>
     <a routerLink="/">Playground</a>
-    <a (click)="logout()">Logout</a>
+    <a href="#" (click)="logout()">Logout</a>
   </div>
 </nav>
 
