added textcommand to alexa connector

--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -9,6 +9,12 @@
 <br/>
 <br/>
 
+<input type="text" [formControl]="commandText">
+<button (click)="sendCommand()">Kommando ausführen</button>
+
+<br/>
+<br/>
+
 <button (click)="getCommutingHistory()">Get Commuting History</button>
 
 <br/>
