--- a/apps/mqtt-client/src/app/login/login.component.html
+++ b/apps/mqtt-client/src/app/login/login.component.html
@@ -1,10 +1,12 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div *ngIf="errorMessage">{{errorMessage}}</div>
   <div class="form-group">
-    <label for="username">Benutzername</label>
-    <input type="text" formControlName="username" />
-    <label for="password">Passwort</label>
-    <input type="password" formControlName="password" />
+    <mat-form-field>
+      <input matInput placeholder="Benutzername" formControlName="username">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="password" placeholder="Passwort" formControlName="password">
+    </mat-form-field>
   </div>
-  <button>Login</button>
+  <button mat-raised-button color="primary">Login</button>
 </form>
