--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -1,51 +1,76 @@
-<button (click)="sendMessage()">Send ESP_7888034/movement</button>
+<button mat-raised-button color="primary" (click)="sendMessage()">Send ESP_7888034/movement</button>
 
 <br/>
 <br/>
 
-Device:
-<select *ngIf="alexaDevices$ | async as devices" [formControl]="alexaDevice">
-  <option value="ALL">Alle</option>
-  <option *ngFor="let device of devices" [value]="device.accountName">{{ device.accountName }} ({{ device.online ? 'online' : 'offline' }})</option>
-</select>
+<mat-form-field *ngIf="alexaDevices$ | async as devices">
+  <mat-label>Gerät</mat-label>
+  <mat-select [formControl]="alexaDevice">
+    <mat-option value="ALL">Alle</mat-option>
+    <mat-option *ngFor="let device of devices" [value]="device.accountName">{{ device.accountName }}</mat-option>
+  </mat-select>
+</mat-form-field>
 
 <br/>
 
-<input type="text" [formControl]="speachText">
-<button (click)="speak()">Speak</button>
+<mat-form-field>
+  <input matInput placeholder="Guten Tag" [formControl]="speachText">
+</mat-form-field>
+<button mat-raised-button color="primary" (click)="speak()">
+  <mat-icon>campaign</mat-icon>
+  Speak
+</button>
 
 <br/>
 
-<input type="text" [formControl]="commandText">
-<button (click)="sendCommand()">Kommando ausführen</button>
+<mat-form-field>
+  <input matInput placeholder="Stelle einen Timer" [formControl]="commandText">
+</mat-form-field>
+<button mat-raised-button color="primary" (click)="sendCommand()">Kommando ausführen</button>
 
 <br/>
 <br/>
 
-<button (click)="getCommutingHistory()">Get Commuting History</button>
+<button mat-raised-button color="primary" (click)="getCommutingHistory()">Get Commuting History</button>
 
 <br/>
 <br/>
 
-<select multiple>
-  <option value="123456">#1 NodeMCU</option>
-  <option value="654789">#2 ESP01</option>
-  <option value="869864">#3 ESP12F</option>
-  <option value="324515">...</option>
-</select>
-<select>
-  <option value="major">major (1.0.1 => 2.0.0)</option>
-  <option value="minor">minor (1.0.1 => 1.1.0)</option>
-  <option value="patch" selected>patch (1.0.1 => 1.0.2)</option>
-</select>
-<select>
-  <option value="esp-commuting-display">esp-commuting-display</option>
-  <option value="esp-motion-sensor">esp-motion-sensor</option>
-  <option value="esp-mqtt">esp-mqtt</option>
-  <option value="esp-relais">esp-relais</option>
-</select>
-<button (click)="triggerPioBuild()">Trigger PIO Build</button>
-<button (click)="killPioBuild()">Kill active PIO Build</button>
+<mat-form-field>
+  <mat-label>ESPs</mat-label>
+  <mat-select multiple>
+    <mat-option value="123456">#1 NodeMCU</mat-option>
+    <mat-option value="654789">#2 ESP01</mat-option>
+    <mat-option value="869864">#3 ESP12F</mat-option>
+    <mat-option value="324515">...</mat-option>
+  </mat-select>
+</mat-form-field>
+<mat-form-field>
+  <mat-label>Release</mat-label>
+  <mat-select>
+    <mat-option value="major">major (1.0.1 => 2.0.0)</mat-option>
+    <mat-option value="minor">minor (1.0.1 => 1.1.0)</mat-option>
+    <mat-option value="patch">patch (1.0.1 => 1.0.2)</mat-option>
+  </mat-select>
+</mat-form-field>
+<mat-form-field>
+  <mat-label>Firmware</mat-label>
+  <mat-select>
+    <mat-option value="esp-commuting-display">Commuting-Display</mat-option>
+    <mat-option value="esp-motion-sensor">Bewegungsmelder</mat-option>
+    <mat-option value="esp-mqtt">MQTT</mat-option>
+    <mat-option value="esp-relais">Relais</mat-option>
+  </mat-select>
+</mat-form-field>
+<br/>
+<button mat-raised-button color="primary" (click)="triggerPioBuild()">
+  <mat-icon>play_arrow</mat-icon>
+  Trigger PIO Build
+</button>
+<button mat-button (click)="killPioBuild()">
+  <mat-icon>stop</mat-icon>
+  Kill active PIO Build
+</button>
 <br/>
 <textarea *ngIf="logMessages$ | async as logMessages" style="width: 100%; height: 400px;">
   {{ logMessages }}
