--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -75,3 +75,17 @@
 <textarea *ngIf="logMessages$ | async as logMessages" style="width: 100%; height: 400px;">
   {{ logMessages }}
 </textarea>
+
+<h2>Logs</h2>
+<div *ngIf="systemLog$ | async as systemLog" style="width: 100%; height: 200px; overflow-y: auto;">
+  <div *ngFor="let x of systemLog">
+    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
+  </div>
+</div>
+
+<h2>Movements</h2>
+<div *ngIf="movementLog$ | async as movementLog" style="width: 100%; height: 200px; overflow-y: auto;">
+  <div *ngFor="let x of movementLog">
+    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
+  </div>
+</div>
