--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -36,30 +36,24 @@
 <br/>
 <br/>
 
-<mat-form-field>
-  <mat-label>ESPs</mat-label>
-  <mat-select multiple>
-    <mat-option value="123456">#1 NodeMCU</mat-option>
-    <mat-option value="654789">#2 ESP01</mat-option>
-    <mat-option value="869864">#3 ESP12F</mat-option>
-    <mat-option value="324515">...</mat-option>
+<mat-form-field *ngIf="espRepos$ | async as repos">
+  <mat-label>Firmware</mat-label>
+  <mat-select [formControl]="libName">
+    <mat-option *ngFor="let repo of repos" [value]="repo">{{repo}}</mat-option>
   </mat-select>
 </mat-form-field>
 <mat-form-field>
   <mat-label>Release</mat-label>
-  <mat-select>
+  <mat-select [formControl]="releaseType">
     <mat-option value="major">major (1.0.1 => 2.0.0)</mat-option>
     <mat-option value="minor">minor (1.0.1 => 1.1.0)</mat-option>
     <mat-option value="patch">patch (1.0.1 => 1.0.2)</mat-option>
   </mat-select>
 </mat-form-field>
-<mat-form-field>
-  <mat-label>Firmware</mat-label>
-  <mat-select>
-    <mat-option value="esp-commuting-display">Commuting-Display</mat-option>
-    <mat-option value="esp-motion-sensor">Bewegungsmelder</mat-option>
-    <mat-option value="esp-mqtt">MQTT</mat-option>
-    <mat-option value="esp-relais">Relais</mat-option>
+<mat-form-field *ngIf="espConfig$ | async as esps">
+  <mat-label>ESPs</mat-label>
+  <mat-select multiple [formControl]="chipIds">
+    <mat-option *ngFor="let esp of esps" [value]="esp.chipId">{{esp.chipId}} ({{esp.description}}, {{esp.model}})</mat-option>
   </mat-select>
 </mat-form-field>
 <br/>
