--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -1,5 +1,24 @@
-<button mat-raised-button color="primary" (click)="sendMessage()">Send ESP_7888034/movement</button>
-
+<ul>
+  <li>ESP_12974077/movement</li>
+  <li>devices/ESP_12974077/temp, 18.90</li>
+  <li>devices/ESP_12974077/hum, 56.6</li>
+  <li>devices/ESP_12974077/dht, {{'{'}}"temperature":18.9,"humidity":56.6}</li>
+  <li>devices/ESP_12974077/voltage, 3.18</li>
+</ul>
+<mat-form-field>
+  <mat-label>MQTT Topic</mat-label>
+  <input matInput placeholder="devices/ESP_12974077/dht" [formControl]="topic">
+</mat-form-field>
+<br/>
+<mat-form-field>
+  <mat-label>MQTT Payload (e.g. JSON)</mat-label>
+  <input matInput placeholder="{temperature: 33.1, humidity: 58.2}" [formControl]="payload">
+</mat-form-field>
+<br/>
+<button mat-raised-button color="primary" (click)="sendMessage()">
+  <mat-icon>send</mat-icon>
+  Send MQTT message
+</button>
 <br/>
 <br/>
 
@@ -28,10 +47,34 @@
 </mat-form-field>
 <button mat-raised-button color="primary" (click)="sendCommand()">Kommando ausführen</button>
 
-<br/>
-<br/>
+<h2>ESP_12974077</h2>
+<div>
+  Batterie: {{latestVoltage$ | async}}V
+</div>
+<div *ngIf="latestTemperature$ | async as temp">
+  Temperatur: {{temp.temperature}} {{temp.trend}}
+</div>
 
-<button mat-raised-button color="primary" (click)="getCommutingHistory()">Get Commuting History</button>
+<h2>DHT</h2>
+<div *ngIf="dhtLog$ | async as dhtLog" style="width: 100%; height: 200px; overflow-y: auto;">
+  <div *ngFor="let x of dhtLog">
+    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.temperature}} °C, {{x.humidity}}%
+  </div>
+</div>
+
+<h2>Logs</h2>
+<div *ngIf="systemLog$ | async as systemLog" style="width: 100%; height: 200px; overflow-y: auto;">
+  <div *ngFor="let x of systemLog">
+    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
+  </div>
+</div>
+
+<h2>Movements</h2>
+<div *ngIf="movementLog$ | async as movementLog" style="width: 100%; height: 200px; overflow-y: auto;">
+  <div *ngFor="let x of movementLog">
+    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
+  </div>
+</div>
 
 <br/>
 <br/>
@@ -70,28 +113,7 @@
   {{ logMessages }}
 </textarea>
 
-<h2>ESP_12974077</h2>
-<div>
-  Batterie: {{latestVoltage$ | async}}V
-</div>
+<br/>
+<br/>
 
-<h2>Logs</h2>
-<div *ngIf="systemLog$ | async as systemLog" style="width: 100%; height: 200px; overflow-y: auto;">
-  <div *ngFor="let x of systemLog">
-    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
-  </div>
-</div>
-
-<h2>Movements</h2>
-<div *ngIf="movementLog$ | async as movementLog" style="width: 100%; height: 200px; overflow-y: auto;">
-  <div *ngFor="let x of movementLog">
-    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
-  </div>
-</div>
-
-<h2>DHT</h2>
-<div *ngIf="dhtLog$ | async as dhtLog" style="width: 100%; height: 200px; overflow-y: auto;">
-  <div *ngFor="let x of dhtLog">
-    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.temperature}} °C, {{x.humidity}}%
-  </div>
-</div>
+<button mat-raised-button color="primary" (click)="getCommutingHistory()">Get Commuting History</button>
