moved logic from playground to device module

--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
   <div>
-    <a routerLink="/">Playground</a>
+    <a routerLink="/playground">Playground</a>
+    <a routerLink="/devices">Geräte</a>
     <a href="#" (click)="logout()">Logout</a>
   </div>
 </nav>
