added preferences to client

--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div>
     <a routerLink="/playground">Playground</a>
     <a routerLink="/devices">Geräte</a>
+    <a routerLink="/preferences">Einstellungen</a>
     <a href="#" (click)="logout()">Logout</a>
   </div>
 </nav>
