moved devices and sensors to facility module

--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav>
   <div>
     <a routerLink="/playground">Playground</a>
-    <a routerLink="/devices">Geräte</a>
-    <a routerLink="/sensors">Sensoren</a>
+    <a routerLink="/facility/devices">Geräte</a>
+    <a routerLink="/facility/sensors">Sensoren</a>
     <a routerLink="/preferences">Einstellungen</a>
     <a href="#" (click)="logout()">Logout</a>
   </div>
