--- a/apps/mqtt-client/src/app/facility/sensor/sensor/sensor.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor/sensor.component.html
@@ -1,8 +1,10 @@
 <div class="sensor" [style.left.px]="sensor.position?.x" [style.top.px]="sensor.position?.y">
   <mat-icon [matMenuTriggerFor]="menu">{{getIconName(sensor.type)}}</mat-icon>
-  <div *ngIf="latest$ | async as latestItem">
-    {{latestItem.value}}{{getSuffix(sensor.type)}} <small>({{timeAgoLabel$ | async}})</small>
-  </div>
+  <ng-container *ngIf="sensor.roomId">
+    <div *ngIf="latest$ | async as latestItem">
+      {{latestItem.value}}{{getSuffix(sensor.type)}} <small>({{latestItem.time | timeAgo | async}})</small>
+    </div>
+</ng-container>
   <div *ngIf="isLoading$ | async">lade...</div>
   <mat-menu #menu="matMenu">
     <p>{{sensor._id}}</p>
@@ -16,5 +18,6 @@
       <ng-template #noItems>Keine Einträge vorhanden</ng-template>
     </div>
     <button mat-menu-item (click)="reloadHistory()">Historie laden</button>
+    <button mat-menu-item (click)="sendMqttMessage()">Fake MQTT</button>
   </mat-menu>
 </div>
