--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -2,6 +2,7 @@
   <li>devices/3357047/temperature, {{'{'}}"value":18.9, "pin":2}<button mat-button color="primary" (click)="applyAndSend(3357047, 'temperature', 18.9, 2)"><mat-icon>check</mat-icon></button></li>
   <li>devices/7888034/humidity, {{'{'}}"value":56.6, "pin":8}<button mat-button color="primary" (click)="applyAndSend(7888034, 'humidity', 56.6, 8)"><mat-icon>check</mat-icon></button></li>
   <li>devices/7888034/humidity, {{'{'}}"value":56.6, "pin":9}<button mat-button color="primary" (click)="applyAndSend(7888034, 'humidity', 56.6, 9)"><mat-icon>check</mat-icon></button></li>
+  <li>devices/7888034/humidity, {{'{'}}"value":56.6}<button mat-button color="primary" (click)="applyAndSend(7888034, 'humidity', 56.6)"><mat-icon>check</mat-icon></button></li>
   <li>devices/9876543/voltage, {{'{'}}"value":3.18}<button mat-button color="primary" (click)="applyAndSend(9876543, 'voltage', 3.18)"><mat-icon>check</mat-icon></button></li>
 </ul>
 <mat-form-field>
@@ -21,31 +22,9 @@
 <br/>
 <br/>
 
-<!-- <h2>ESP 7888034</h2>
-<div>
-  Batterie: {{latestVoltage$ | async}}V
-</div>
-<div *ngIf="latestTemperature$ | async as temp">
-  Temperatur: {{temp.temperature}} {{temp.trend}}
-</div>
-
-<h2>DHT</h2>
-<div *ngIf="dhtLog$ | async as dhtLog" style="width: 100%; height: 200px; overflow-y: auto;">
-  <div *ngFor="let x of dhtLog">
-    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.temperature}} °C, {{x.humidity}}%
-  </div>
-</div> -->
-
 <h2>Logs</h2>
 <div *ngIf="systemLog$ | async as systemLog" style="width: 100%; height: 200px; overflow-y: auto;">
   <div *ngFor="let x of systemLog">
-    {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
-  </div>
-</div>
-
-<h2>Movements</h2>
-<div *ngIf="movementLog$ | async as movementLog" style="width: 100%; height: 200px; overflow-y: auto;">
-  <div *ngFor="let x of movementLog">
     {{x.time | date:'dd.MM.yyyy HH:mm:ss'}}: {{x.message}}
   </div>
 </div>
