--- a/apps/mqtt-client/src/app/facility/sensor/floor/floor.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/floor/floor.component.html
@@ -3,6 +3,6 @@
   cdkDropListGroup
   class="floor"
 >
-  <smart-home-conx-room *ngFor="let room of rooms" [room]="room"></smart-home-conx-room>
-  <smart-home-conx-unassigned-sensors></smart-home-conx-unassigned-sensors>
+  <smart-home-conx-room *ngFor="let room of rooms" [room]="room" [enabled]="enabled"></smart-home-conx-room>
+  <smart-home-conx-unassigned-sensors [enabled]="enabled"></smart-home-conx-unassigned-sensors>
 </div>
