--- a/apps/mqtt-client/src/app/facility/sensor/sensor-list/sensor-list.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-list/sensor-list.component.html
@@ -11,4 +11,5 @@
   Erstellen
 </button>
 
-<smart-home-conx-floor></smart-home-conx-floor>
+<smart-home-conx-floor [enabled]="editModeEnabled"></smart-home-conx-floor>
+<mat-slide-toggle (change)="onEditModeChange($event)">Bearbeitungsmodus aktiv</mat-slide-toggle>
