--- a/apps/mqtt-client/src/app/facility/sensor/unassigned-sensors/unassigned-sensors.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/unassigned-sensors/unassigned-sensors.component.html
@@ -9,5 +9,6 @@
     [sensor]="sensor"
     [cdkDragData]="sensor"
     cdkDrag
+    [cdkDragDisabled]="!enabled"
   ></smart-home-conx-sensor>
 </div>
