--- a/apps/mqtt-client/src/app/facility/sensor/room/room.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/room/room.component.html
@@ -15,5 +15,6 @@
     [sensor]="sensor"
     [cdkDragData]="sensor"
     cdkDrag
+    [cdkDragDisabled]="!enabled"
   ></smart-home-conx-sensor>
 </div>
