--- a/apps/mqtt-client/src/app/facility/sensor/room/room.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/room/room.component.html
@@ -1,4 +1,4 @@
-<div
+<mat-card
   class="room"
   [style.width.px]="room.width"
   [style.height.px]="room.height"
@@ -17,4 +17,4 @@
     cdkDrag
     [cdkDragDisabled]="!enabled"
   ></smart-home-conx-sensor>
-</div>
+</mat-card>
