--- a/apps/mqtt-client/src/app/facility/sensor/unassigned-sensors/unassigned-sensors.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/unassigned-sensors/unassigned-sensors.component.html
@@ -1,4 +1,4 @@
-<div
+<mat-card
   id="unassigned-list"
   cdkDropList
   cdkDropListSortingDisabled="true"
@@ -11,4 +11,4 @@
     cdkDrag
     [cdkDragDisabled]="!enabled"
   ></smart-home-conx-sensor>
-</div>
+</mat-card>
