--- a/apps/mqtt-client/src/app/facility/sensor/sensor-create/sensor-create.component.scss
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-create/sensor-create.component.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  mat-select-trigger > mat-icon {
+    margin-right: 16px;
+    vertical-align: middle;
+  }
 }
