--- a/apps/mqtt-client/src/app/facility/sensor/sensor-list/sensor-list.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-list/sensor-list.component.html
@@ -11,5 +11,7 @@
   Erstellen
 </button>
 
-<smart-home-conx-floor [enabled]="editModeEnabled"></smart-home-conx-floor>
-<mat-slide-toggle (change)="onEditModeChange($event)">Bearbeitungsmodus aktiv</mat-slide-toggle>
+<div style="margin-top: 20px;">
+  <mat-slide-toggle (change)="onEditModeChange($event)">Bearbeitungsmodus aktiv</mat-slide-toggle>
+  <smart-home-conx-floor [enabled]="editModeEnabled"></smart-home-conx-floor>
+</div>
