--- a/apps/mqtt-client/src/app/facility/device/device-list/device-list.component.html
+++ b/apps/mqtt-client/src/app/facility/device/device-list/device-list.component.html
@@ -6,11 +6,12 @@
     </ng-template>
     <ng-container *ngIf="espList$ | async as espList">
       <div *ngFor="let esp of espList">
+        <smart-home-conx-connection-status-indicator [status]="esp.connectionStatus"></smart-home-conx-connection-status-indicator>
         {{esp.model}} - {{esp.description}} - {{esp.chipId}}
         <button mat-icon-button (click)="editDevice(esp)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="startOtaUpdate(esp.chipId)">
+        <button mat-icon-button *ngIf="esp.connectionStatus === ConnectionStatus.ONLINE" (click)="startOtaUpdate(esp.chipId)">
           <mat-icon>system_update</mat-icon>
         </button>
       </div>
