first implementation of commuting feature

--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/playground">Playground</a>
     <a routerLink="/facility/devices">Geräte</a>
     <a routerLink="/facility/sensors">Sensoren</a>
+    <a routerLink="/commuting">Pendeln</a>
     <a routerLink="/preferences">Einstellungen</a>
     <a href="#" (click)="logout($event)">Logout</a>
   </div>
