added fuelprices to UI

--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -1,3 +1,5 @@
+<smart-home-conx-tankerkoenig-prices></smart-home-conx-tankerkoenig-prices>
+
 <ul>
   <li>devices/3357047/temperature, {{'{'}}"value":18.9, "pin":2}<button mat-button color="primary" (click)="applyAndSend(3357047, 'temperature', 18.9, 2)"><mat-icon>check</mat-icon></button></li>
   <li>devices/7888034/humidity, {{'{'}}"value":56.6, "pin":8}<button mat-button color="primary" (click)="applyAndSend(7888034, 'humidity', 56.6, 8)"><mat-icon>check</mat-icon></button></li>
